Set email configuration for all environments

--- a/templates/configuration.yml.jinja2
+++ b/templates/configuration.yml.jinja2
@@ -1,6 +1,6 @@
 ---
 
-production:
+default:
 {% if mail_method == "sendmail" %}
   email_delivery_method: :sendmail
 {% elif mail_method == "smtp" %}
