--- a/templates/nginx.conf.jinja2
+++ b/templates/nginx.conf.jinja2
@@ -30,19 +30,23 @@ upstream openproject {
 {% endif %}
 }
 
-
+{% if use_letsencrypt %}
 server {
   server_name {{hostname}};
-  {% locations %}
+  return 301 https://$server_name$request_uri;
 }
 
-{% if use_letsencrypt %}
 server {
   listen 443 ssl;
 
   ssl_certificate     /etc/letsencrypt/live/{{hostname}}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/{{hostname}}/privkey.pem;
 
+  server_name {{hostname}};
+  {% locations %}
+}
+{% else %}
+server {
   server_name {{hostname}};
   {% locations %}
 }
