--- a/templates/nginx.conf.jinja2
+++ b/templates/nginx.conf.jinja2
@@ -42,6 +42,8 @@ server {
 
   ssl_certificate     /etc/letsencrypt/live/{{hostname}}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/{{hostname}}/privkey.pem;
+  
+  add_header Strict-Transport-Security max-age=86400;
 
   server_name {{hostname}};
   {% locations %}
